domain/src/main/java/com/example/domain/core/error/FailureHandler.kt
package com.example.domain.core.error

import com.example.domain.core.error.Failure

interface FailureHandler {
    fun handleThrowable(throwable: Throwable): Failure
}